syntax = "proto3";
package proto;
option go_package = "github.com/alfreddobradi/verbose-spork/protobuf";
import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";

message Empty {}

message StartRequest {
    string Name = 1;
    int64 Amount = 2;
    google.protobuf.Timestamp Timestamp = 3;
}

message StartResponse {
    string Status = 1;
    string Error = 2;
    google.protobuf.Timestamp Timestamp = 3;
}

message FinishResponse {
    string Status = 1;
    string Error = 2;
    google.protobuf.Timestamp Timestamp = 3;
}

message TimerRequest {
    string TraceID = 1;
    string BuildID = 2;
    string Reply = 3;
    string Duration = 4;
    int64 Amount = 5;
    google.protobuf.Timestamp Timestamp = 6;
}

message TimerResponse {
    string Status = 1;
    string Error = 2;
    google.protobuf.Timestamp Deadline = 3;
    google.protobuf.Timestamp Timestamp = 4;
}

message TimerFired {
    google.protobuf.Timestamp Timestamp = 1;
}

message DescribeInventoryRequest {
    string TraceID = 1;
    google.protobuf.Timestamp Timestamp = 2;
}

message DescribeInventoryResponse {
    google.protobuf.Struct Inventory = 1;
    google.protobuf.Timestamp Timestamp = 2;
}

service Inventory {
    rpc Start (StartRequest) returns (StartResponse);
    rpc Describe (DescribeInventoryRequest) returns (DescribeInventoryResponse);
}

service Timer {
    rpc CreateTimer (TimerRequest) returns (TimerResponse);
}